# rapla-ical-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  checks.yml  deploy.yml
src/: api.rs  db.rs  main.rs  overlay.rs  web.rs
web/: index.html  package.json  public.html  vite.config.ts
web/src/: main.ts  public.css  public.ts  style.css
